# rexpokit

./: .gitignore  DESCRIPTION  MD5  NAMESPACE  NEWS  R Console.txt  README  README.md  Zanne_etal_tree_README.txt  cleanup  config.h  config.h.in  config.status  configure  configure.ac
R/: 00_generics.r  expm.r  rexpokit-package.R  rexpokit.R  rexpokit_v1.R  utils.r  wrappers.r
demo/: expm.r  expm_check.r
inst/: CITATION  REFERENCES.bib
inst/notes/: 2017-08-15_CRAN_submission.txt  2019-06-26_submission_email.txt  2023-06-21_submission_email.txt  2023-10-28_submission_email.txt  2023-10-31_submission_email.txt  2023-11-22_submission_email.txt  2026-04-01_submission_email.txt
inst/notes/src_changes_notes/: 2019-11-04_submission_email.txt  installation_by_hand.txt  installation_by_hand_0.26.6.5.txt  lapack.f  (+1 more)
man/: 00_rexpokit-package.Rd  01_expm.Rd  coo2mat.Rd  expokit_dgexpv_Qmat.Rd  expokit_dgexpv_wrapper.Rd  expokit_dgpadm_Qmat.Rd  expokit_dmexpv_Qmat.Rd  expokit_dmexpv_wrapper.Rd  expokit_mydgexpv_wrapper.Rd  expokit_mydmexpv_wrapper.Rd  expokit_wrapalldgexpv_tvals.Rd  expokit_wrapalldmexpv_tvals.Rd  fermat.test.Rd  findrows_w_all_zeros.Rd  mat2coo_forloop.Rd  maxent.Rd  row_allzero_TF.Rd  zzz_SparseM_coo_to_REXPOKIT_coo.Rd  zzz_coo2mat.Rd  zzz_mat2coo.Rd
src/: Makevars  Makevars.in  Makevars.win  coo.cpp  dgcoov.f  dgcoox.f  expokit.h  expokit_wrappers.cpp  itscale5.f  lapack.f  mataid.f  my_expokit.f  my_matexp.f  rcpp_module.cpp  symbols.rds  wrappers.cpp
src/expokit/: my_expokit.f
src/lapack/: blas_mod.f  dgcoox.f  lapack.f  mataid.f
tests/: README  expm.R  run  tester.r  valgrind.r
